--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -52,291 +52,262 @@ table {
   Custom styles
   ========================================
 */
+
 body {
 	color: #888;
-	font: 300 16px/22px "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  }
-  
-
-/*
-  ========================================
-  Grid
-  ========================================
-*/
-/* Picking a Box Size 
-Generally speaking, the best box-sizing value to use is border-box. The border-box value makes our math much, much easier. If we want an element to be 400 pixels wide, it is, and it will remain 400 pixels wide no matter what padding or border values we add to it. Additionally,
-we can easily mix length values. Say we want our box to be 40% wide. Adding a padding of 20 pixels and a border of 10 pixels around every side of an element isn’t difficult,
-and we can still guarantee that the actual width of our box will remain 40% despite using pixel values elsewhere. The only drawback to using the box-sizing property is that as part of the CSS3 specification,
-it isn’t supported in every browser; it especially lacks support in older browsers. Fortunately this is becoming less and less relevant as new browsers are released. Chances are we’re safe to use the box-sizing property,
-but should we notice any issues, it’s worth looking into which browser those issues are occurring with. 
-*/
-
-/* we can use the universal selector, *, along with universal pseudo-elements, *:before and *:after, to select every imaginable element and change the box-sizing to border-box. Remember,
-we’re going to want to include the necessary vendor prefixes for the box-sizing property, as it is a relatively new property. 
-*/
-
-*,
-*:before,
-*:after {
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-/*
-  ========================================
-  Clearfix
-  ========================================
-*/
-.group:before,
-.group:after {
-  content: "";
-  display: table;
-}
-.group:after {
-  clear: both;
-}
-.group {
-  clear: both;
-  *zoom: 1;
-}
-
-
-/*Next we’ll want to create a class that will serve as a container for our elements. We can use this container class on different elements to set a common width, center the elements on the page, and apply some common horizontal padding.*/
-/* Just below our universal selector rule set, let’s create a selector with a class of container. Within this selector let’s set our width to 960 pixels, our left and right padding to 30 pixels, our top and bottom margins to 0, and our left and right margins to auto. */
-/* Setting a width tells the browser definitively how wide any element with the class of container should be. Using a left and right margin of auto in conjunction with this width lets the browser automatically figure out equal left and right margins for the element, thus centering it on the page. Lastly, the left and right padding ensures that our content isn’t sitting directly on the edge of the element and provides a little breathing room for the content. */
-.container {
-	margin       : 0 auto;
-	padding-left : 30px;
-	padding-right: 30px;
-	width        : 960px;
-}
-
-/*
-  ========================================
-  Typography
-  ========================================
-*/
-/* Now that all of our content is centered, let’s create some vertical spacing between elements. For starters let’s place a 22-pixel bottom margin on a few of our heading and paragraph elements. We’ll place and comment on these typography styles below our grid styles. */
-h1, h3, h4, h5, p {
-	margin-bottom: 22px;
-  }
-
-  h1, h2, h3, h4 {
-	color: #648880;
-  }
-
- h1 {
- 	font-size  : 36px;
- 	line-height: 44px;
- }
-
- h2 {
- 	font-size  : 24px;
- 	line-height: 44px;
- }
-
- h3 {
- 	font-size: 21px;
- }
-
- h4 {
- 	font-size: 18px;
- }
- h5 {
-	color: #a9b2b9;
-	font-size: 14px;
-	font-weight: 400;
-  }
-
-  strong {
-  	font-weight: 400;
-  }
-
-  cite,
-  em {
-  	font-style: italic;
-  }
-
-  body {
-	color: #888;
+	background: #293f50;
 	font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   }
   
-/*
-  ========================================
-  Links
-  ========================================
-*/
-
-a:hover {
-	color: #a9b2b9;
-}
-
-a {
-	color          : #648880;
-	text-decoration: none;
-
-}
-
-.teaser a:hover h3 {
-	color: #a9b2b9;
-}
-
-/* ============================================== */
-
-p a {
-	border-bottom: 1px solid #dfe2e5;
-}
-
-h5 {
-	color         : #a9b2b9;
-	font-size     : 14px;
-	font-weight   : 400;
-	text-transform: uppercase;
-}
-				  
-  
-				
-.logo {
-	border-top : 4px solid #648880;
-	float      : left;
-	font-size  : 48px;
-	line-height: 44px;
-	padding    : 40px 0 22px 0;
-} 
-
-.tagline {
-	margin: 66px 0 22px 0;
-	text-align: right;
-
-}
-
-.primary-nav {
-	font-size     : 14px;
-	font-weight   : 400;
-	letter-spacing: .5px;
-	text-transform: uppercase;
-}
-
-/*
-  ========================================
-  Navigation
-  ========================================
-*/
-
-.nav {
-	text-align: right;
-  }
-  
-/*
-  ========================================
-  Buttons
-  ========================================
-*/
-/* Let’s also try our hand at creating a border and some rounded corners. We’ll start by placing a button within the top <section> element on our home page, just below the header. */
-/* Previously we added an <a> element within this <section> element. Let’s add the classes of btn and btn-alt to this anchor.    */
-/* To begin let’s add the btn class and apply some common styles that can be shared across all buttons. We’ll want all of our buttons to have a 5-pixel border-radius. They should be displayed as inline-block elements so we can add padding around all four sides without issue; we’ll remove any margin. */
-
-.btn {
-	border-radius: 5px;
-	display      : inline-block;
-	margin       : 0;
-}
-
-/* We’ll also want to include styles specific to this button, which we’ll do by using the btn-alt class. Here we’ll add a 1-pixel, solid, gray border with 10 pixels of padding on the top and bottom of the button and 30 pixels of padding on the left and right of the button. */
-.btn-alt {
-	border : 1px solid #51a2f3;
-	padding: 10px 30px;
-}
-/* Using both the btn and btn-alt classes on the same <a> element allows these styles to be layered on, rendering all of the styles on a single element. */
-
-/*
-  ========================================
-  Home
-  ========================================
-*/
-/* Because we’re working on the home page, let’s also add a bit of padding to the <section> element that contains our <a> element with the classes of btn and btn-alt. We’ll do so by adding a class attribute value of hero to the <section> element, alongside the container class attribute value, as this will be the leading section of our website. */
-/* Next we’ll want to create a new section within our CSS file for home page styles, and, once we’re ready, we’ll use the class of hero to apply padding around all four sides of the <section> element. */
-.hero {
-	line-height: 44px;
-	padding    : 22px 80px 66px 80px;
-	text-align: center;
-
-}
-
-.hero h2 {
-	font-size: 36px;
-}
-
-.hero p {
-	font-size: 24px;
-	font-weight: 100;
-
-}
-
   /*
-  ========================================
-  Primary header
-  ========================================
-*/
-.logo {
-	border-top    : 4px solid #648880;
-	float         : left;
-	font-size     : 48px;
-	font-weight   : 100;
-	letter-spacing: .5px;
-	line-height   : 44px;
-	padding       : 40px 0 22px 0;
-	text-transform: uppercase;
-}
-
-/*
-  ========================================
-  Primary footer
-  ========================================
-*/
-
-.primary-footer small {
-	float: left;
-	font-weight: 400;
-  }
+	========================================
+	Grid
+	========================================
+  */
   
-  .primary-footer {
-	color: #648880;
-	font-size: 14px;
-  	padding-bottom: 44px;
-  	padding-top: 44px;
+  *,
+  *:before,
+  *:after {
+	-webkit-box-sizing: border-box;
+	   -moz-box-sizing: border-box;
+			box-sizing: border-box;
   }
-
+  .container,
+  .grid {
+	margin: 0 auto;
+	width: 960px;
+  }
+  .container {
+	padding-left: 30px;
+	padding-right: 30px;
+  }
+  .grid,
+  .col-1-3,
+  .col-2-3 {
+	padding-left: 15px;
+	padding-right: 15px;
+  }
+  .col-1-3,
+  .col-2-3  {
+	display: inline-block;
+	vertical-align: top;
+  }
   .col-1-3 {
-	width: 33.33%;
+	width: 33%;
   }
   .col-2-3 {
 	width: 66.66%;
   }
-
-  .col-1-3,
-  .col-2-3 {
-	display: inline-block;
-	vertical-align: top;
-  }
-
-  .grid,
-.col-1-3,
-.col-2-3 {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.container,
-.grid {
-  margin: 0 auto;
-  width: 960px;
-}
-.container {
-  padding-left: 30px;
-  padding-right: 30px;
-}
-
   
+  /*
+	========================================
+	Clearfix
+	========================================
+  */
+  
+  .group:before,
+  .group:after {
+	content: "";
+	display: table;
+  }
+  .group:after {
+	clear: both;
+  }
+  .group {
+	clear: both;
+	*zoom: 1;
+  }
+  
+  /*
+	========================================
+	Typography
+	========================================
+  */
+  
+  h1, h2, h3, h4 {
+	color: #648880;
+  }
+  h1, h3, h4, h5, p {
+	margin-bottom: 22px;
+  }
+  h1 {
+	font-size: 36px;
+	line-height: 44px;
+  }
+  h2 {
+	font-size: 24px;
+	line-height: 44px;
+  }
+  h3 {
+	font-size: 21px;
+  }
+  h4 {
+	font-size: 18px;
+  }
+  h5 {
+	color: #a9b2b9;
+	font-size: 14px;
+	font-weight: 400;
+	text-transform: uppercase;
+  }
+  strong {
+	font-weight: 400;
+  }
+  cite,
+  em {
+	font-style: italic;
+  }
+  
+  /*
+	========================================
+	Links
+	========================================
+  */
+  
+  a {
+	color: #648880;
+	text-decoration: none;
+  }
+  a:hover {
+	color: #a9b2b9;
+  }
+  p a {
+	border-bottom: 1px solid #dfe2e5;
+  }
+  
+  /*
+	========================================
+	Buttons
+	========================================
+  */
+  
+  .btn {
+	border-radius: 5px;
+	color: #fff;
+	cursor: pointer;
+	display: inline-block;
+	font-weight: 400;
+	letter-spacing: .5px;
+	margin: 0;
+	text-transform: uppercase;
+  }
+  
+  .btn-alt {
+	border: 1px solid #fff;
+	padding: 10px 30px;
+  }
+  .btn-alt:hover {
+	background: #fff;
+	color: #648880;
+  }
+  
+  
+  /*
+	========================================
+	Primary header
+	========================================
+  */
+  
+  .logo {
+	border-top: 4px solid #648880;
+	float: left;
+	font-size: 48px;
+	font-weight: 100;
+	letter-spacing: .5px;
+	line-height: 44px;
+	padding: 40px 0 22px 0;
+	text-transform: uppercase;
+  }
+  .tagline {
+	margin: 66px 0 22px 0;
+	text-align: right;
+  }
+  .primary-nav {
+	font-size: 14px;
+	font-weight: 400;
+	letter-spacing: .5px;
+	text-transform: uppercase;
+  }
+  
+  /*
+	========================================
+	Primary footer
+	========================================
+  */
+  
+  .primary-footer {
+	color: #648880;
+	font-size: 14px;
+	padding-bottom: 44px;
+	padding-top: 44px;
+  }
+  .primary-footer small {
+	float: left;
+	font-weight: 400;
+  }
+  
+  /*
+	========================================
+	Navigation
+	========================================
+  */
+  
+  .nav {
+	text-align: right;
+  }
+  
+  /*
+	========================================
+	Home
+	========================================
+  */
+  
+  .hero {
+	color      : #fff;
+	line-height: 44px;
+	padding    : 22px 80px 66px 80px;
+	text-align : center;
+  }
+  .hero h2 {
+	font-size: 36px;
+  }
+  .hero p {
+	font-size: 24px;
+	font-weight: 100;
+  }
+  .teaser a:hover h3 {
+	color: #a9b2b9;
+  }
+  
+.primary-header a,
+.primary-footer a {
+	color: #fff;
+}
+
+.primary-header a:hover,
+.primary-footer a:hover {
+	color: #648880;
+}
+
+
+/*
+  ========================================
+  Rows
+  ========================================
+*/
+
+.row,
+.row-alt{
+  min-width: 960px;
+}
+.row {
+  background: #fff;
+  padding: 66px 0 44px 0;
+}
+.row-alt {
+   background: #cbe2c1;
+   background: -webkit-linear-gradient(to right, #a1d3b0, #f6f1d3);
+   background: -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
+   background: linear-gradient(to right, #a1d3b0, #f6f1d3);
+   padding: 44px 0 22px 0;
+ }
