--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -311,3 +311,18 @@ body {
    background: linear-gradient(to right, #a1d3b0, #f6f1d3);
    padding: 44px 0 22px 0;
  }
+
+ /*
+  ========================================
+  Leads
+  ========================================
+*/
+
+.lead {
+	text-align: center;
+  }
+  .lead p {
+	font-size: 21px;
+	line-height: 33px;
+  }
+  
