--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -319,10 +319,36 @@ body {
 */
 
 .lead {
-	text-align: center;
+	text-align: left;
   }
   .lead p {
 	font-size: 21px;
 	line-height: 33px;
   }
+ 
+  .nav li {
+	display: inline-block;
+	margin: 0 10px;
+	vertical-align: top;
+  }
+  .nav li:last-child {
+	margin-right: 0;
+  }
+ 
+/*
+  ========================================
+  Writer
+  ========================================
+*/
   
+.writer-info {
+	border: 1px solid #dfe2e5;
+	border-radius: 5px;
+	/* margin-top: ; */
+	padding: 22px 0;
+	text-align: center;
+  }
+  .writer {
+	margin-bottom: 44px;
+  }
+   
