--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -54,8 +54,10 @@ table {
 */
 
 body {
-	color: #888;
-	background: #293f50;
+	/* color: #888; */
+	color: #000000;
+	/* background: #293f50; */
+	background: cadetblue;
 	font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   }
   
@@ -125,7 +127,8 @@ body {
   */
   
   h1, h2, h3, h4 {
-	color: #648880;
+	/* color: #648880; */
+	color: #000000;
   }
   h1, h3, h4, h5, p {
 	margin-bottom: 22px;
