--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -354,4 +354,64 @@ body {
   .writer {
 	margin-bottom: 44px;
   }
-   
+  
+  
+/*
+  ========================================
+  Contact-Us
+  ========================================
+*/
+
+.li-style {
+	list-style: square;
+	margin: 0 0 22px 30px;
+  }
+  
+
+  form {
+	margin-bottom: 22px;
+  }
+  input,
+  select,
+  textarea {
+	font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  } 
+
+
+  .contact-us-group label {
+	color: #648880;
+	cursor: pointer;
+	font-weight: 400;
+  }
+  .contact-us-group input,
+  .contact-us-group select,
+  .contact-us-group textarea {
+	border: 1px solid #c6c9cc;
+	border-radius: 5px;
+	color: #888;
+	display: block;
+	margin: 5px 0 27px 0;
+	padding: 5px 8px;
+  }
+  .contact-us-group input,
+  .contact-us-group textarea {
+	width: 100%;
+  }
+  .contact-us-group select {
+	height: 34px;
+	width: 60px;
+  }
+  .contact-us-group textarea {
+	height: 78px;
+  }
+  
+  .btn-default {
+	border: 0;
+	background: #648880;
+	padding: 11px 30px;
+	font-size: 14px;
+  }
+  .btn-default:hover {
+	background: #77a198;
+  }
+  
