--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -58,7 +58,7 @@ body {
 	color: #000000;
 	/* background: #293f50; */
 	background: cadetblue;
-	font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font: 300 16px/22px "Slabo 27px", Verdana,Helvetica,Arial,sans-serif;
   }
   
   /*
