--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -54,12 +54,14 @@ table {
 */
 
 body {
-	/* color: #888; */
-	color: #000000;
+	color: rgb(77, 66, 85);
+	/* color: #000000; */
 	/* background: #293f50; */
-	background: cadetblue;
+	background: #268CFF;
 	font: 300 16px/22px "Slabo 27px", Verdana,Helvetica,Arial,sans-serif;
   }
+
+
   
   /*
 	========================================
@@ -219,7 +221,7 @@ body {
 	letter-spacing: .5px;
 	line-height: 44px;
 	padding: 40px 0 22px 0;
-	text-transform: uppercase;
+	/* text-transform: uppercase; */
   }
   .tagline {
 	margin: 66px 0 22px 0;
@@ -309,11 +311,19 @@ body {
 }
 .row-alt {
    background: #cbe2c1;
-   background: -webkit-linear-gradient(to right, #a1d3b0, #f6f1d3);
-   background: -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
-   background: linear-gradient(to right, #a1d3b0, #f6f1d3);
+   background: -webkit-linear-gradient(to right, #268CFF, #f6f1d3);
+   background: -moz-linear-gradient(to right, #268CFF, #f6f1d3);
+   background: linear-gradient(to right, #268CFF, #f6f1d3);
    padding: 44px 0 22px 0;
  }
+
+
+.row-1 {
+	min-width : 960px;
+	background: #f6f1d3;
+	padding   : 66px 0 44px 0;
+}
+
 
  /*
   ========================================
