--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -423,3 +423,18 @@ body {
 	color: #000;
   }
   
+.theme h1 {
+	text-align: center;
+	background-color: #268bff81;
+}
+.theme h2 {
+	text-align: center;
+	background-color: #268bff23;
+}
+.theme h3 {
+	text-align: center;
+	text-decoration: underline;
+}
+.theme p {
+	text-align: justify;
+}
