--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,8 +1,9 @@
 header,
 nav,
+article,
 section,
 footer {
-	background-color: azure;
+	background-color: rgb(182, 243, 243);
 	border-radius: 5px;
 	color: black;
 	font-family: Arial, Helvetica, sans-serif;
@@ -10,15 +11,17 @@ footer {
 	padding: 30px;
 	margin-bottom: 20px;
 }
-header::before,
+/* header::before,
 nav::before,
 section::before,
+article::before,
 footer::before {
 	content: '<';
 }
 header::after,
 nav::after,
 section::after,
+article::after,
 footer::after {
 	content: '>';
-}
+} */
